--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     image: redmine
     ports:
       - "8080:3000"
+    networks: redmine-network
   
   db:
     container_name: some-postgres
@@ -19,9 +20,13 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - 5432:5432
+    networks: redmine-network
 
 volumes:
   pgdata:
+
+networks:
+  redmine-network:
   
   
   
